k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: intel-ingestion
  labels:
    name: intel-ingestion
